# EE4-Robotics

./: README.md
Speech/: grabbed.py  listen.py  navigation_arrived.py  navigation_arrived2.py  process.py  process2.py  process_old.py  process_old2.py  talk.py  voice.py
baxter/: baxter.sh
baxter/.catkin_tools/profiles/default/: config.yaml  devel_collisions.txt
baxter/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
baxter/devel/.private/atlas_moveit_config/: .catkin  .rosinstall  local_setup.sh  setup.sh
baxter/devel/.private/atlas_v3_moveit_config/: .catkin  .rosinstall  local_setup.sh  setup.sh
baxter/devel/.private/baxter_core_msgs/: .catkin  local_setup.sh  setup.sh
baxter/devel/.private/baxter_description/: .catkin  local_setup.sh  setup.sh
baxter/devel/.private/baxter_examples/: .catkin  setup.sh
baxter/devel/.private/baxter_gazebo/: .catkin  setup.sh
baxter/devel/.private/baxter_ikfast_left_arm_plugin/: .catkin  .rosinstall
baxter/devel/.private/baxter_ikfast_right_arm_plugin/: .catkin  local_setup.sh  setup.sh
baxter/devel/.private/baxter_interface/: .catkin  setup.sh
baxter/devel/.private/baxter_maintenance_msgs/: .catkin  .rosinstall  local_setup.sh
baxter/devel/.private/baxter_moveit_config/: .catkin  setup.sh
baxter/devel/.private/baxter_moveit_tutorial/: .catkin  setup.sh
baxter/devel/.private/baxter_pnp_basket_cartesian/: .catkin  .rosinstall  local_setup.sh
baxter/devel/.private/baxter_pnp_one_arm_cartesian_sim/: .catkin
baxter/devel/.private/baxter_sim_controllers/: .catkin  .rosinstall
baxter/devel/.private/baxter_sim_examples/: .catkin  .rosinstall  local_setup.sh
baxter/devel/.private/baxter_sim_hardware/: .catkin  local_setup.sh
baxter/devel/.private/baxter_sim_io/: .catkin  setup.sh
baxter/devel/.private/baxter_sim_kinematics/: .catkin
baxter/devel/.private/baxter_tools/: .catkin
baxter/devel/.private/catkin_tools_prebuild/: .catkin  local_setup.sh
baxter/devel/.private/gazebo_dev/: .catkin  setup.sh
baxter/devel/.private/gazebo_msgs/: .catkin  local_setup.sh
baxter/devel/.private/gazebo_plugins/: .catkin
baxter/devel/.private/gazebo_ros/: .catkin  local_setup.sh
baxter/devel/.private/gazebo_ros_control/: .catkin  local_setup.sh  setup.sh
baxter/devel/.private/iri_wam_moveit_config/: .catkin  .rosinstall  local_setup.sh
baxter/devel/.private/moveit_python/: .catkin  .rosinstall  local_setup.sh
baxter/devel/.private/panda_moveit_config/: .catkin  local_setup.sh
baxter/devel/.private/r2_moveit_generated/: .catkin  setup.sh
baxter/devel/.private/rethink_ee_description/: .catkin  .rosinstall
baxter/devel/.private/snowboy_ros/: .catkin  .rosinstall  local_setup.sh
baxter/devel/.private/sound_play/: .catkin  local_setup.sh  setup.sh
baxter/devel/include/baxter_core_msgs/: AnalogIOState.h  AnalogIOStates.h  AnalogOutputCommand.h  AssemblyState.h  AssemblyStates.h  CameraControl.h  (+31 more)
baxter/logs/baxter_pnp_basket_cartesian/: build.cmake.000.log.stderr
baxter/logs/baxter_pnp_one_arm_cartesian_sim/: build.cmake.000.log.stderr
baxter/logs/snowboy_ros/: build.cmake.000.log.stderr
baxter/src/: .rosinstall  .rosinstall.bak
baxter/src/baxter_pnp_basket_cartesian/: CMakeLists.txt  baxter_img.cpp  baxter_img_basket.cpp  baxter_pnp.py
baxter/src/baxter_pnp_one_arm_cartesian_sim/: CMakeLists.txt  baxter_pnp.py
baxter/src/snowboy_ros/: .gitmodules  CMakeLists.txt  README.md
baxter/src/snowboy_ros/cfg/: SnowboyReconfigure.cfg
baxter/src/snowboy_ros/cmake_modules/: FindBLAS.cmake
baxter/src/snowboy_ros/include/snowboy_ros/: hotword_detector.h
baxter/src/snowboy_ros/launch/: snowboy.launch  snowboy2.launch  snowboy_demo.launch
baxter/src/snowboy_ros/resources/: Hey_Amigo.pmdl  No.pmdl  Yes.pmdl  Yes2.pmdl  Yes3.pmdl  apple.pmdl  banana.pmdl  graby.pmdl  introduce.pmdl  orange.pmdl  thankyou.pmdl  thankyou2.pmdl  thankyou3.pmdl  youcango.pmdl
baxter/src/snowboy_ros/resources/Old/: No.pmdl  Yes.pmdl  apple.pmdl  banana.pmdl  graby.pmdl  orange.pmdl
baxter/src/snowboy_ros/src/: hotword_detector.cpp  hotword_detector_node.cpp  hotword_detector_node2.cpp  hotword_detector_node3.cpp  hotword_detector_node5.cpp  hotword_detector_node6.cpp  hotword_detector_node7.cpp  hotword_detector_node8.cpp
scripts/: 3d.py  current.py  currentjoint.py  init.py  main.py  move.py  navigation_arrived.py  node.py
(+998 files in other folders)
